// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketIntegrations /> should render correctly 1`] = `
<Panel>
  <PanelHeader>
    <Flex
      align="center"
      height="100%"
      justify="space-between"
    >
      <Flex>
        <Styled(styled.h4)
          margin="0"
          marginRight="2.5rem"
          weight="bold"
        >
          INTEGRATIONS
        </Styled(styled.h4)>
      </Flex>
    </Flex>
  </PanelHeader>
  <Styled(PanelContent)>
    <Styled(Flex)>
      <TicketIntegrationListItem
        integration={
          Object {
            "id": 1,
            "isActive": true,
            "logoUrl": "#",
            "name": "Some Name",
            "sold": 1000,
            "total": 1000,
          }
        }
        integrations={
          Array [
            Object {
              "id": 1,
              "isActive": true,
              "logoUrl": "#",
              "name": "Some Name",
              "sold": 1000,
              "total": 1000,
            },
            Object {
              "id": 2,
              "isActive": true,
              "logoUrl": "#",
              "name": "Some Name",
              "sold": 1000,
              "total": 1000,
            },
          ]
        }
        key="1"
      />
      <TicketIntegrationListItem
        integration={
          Object {
            "id": 2,
            "isActive": true,
            "logoUrl": "#",
            "name": "Some Name",
            "sold": 1000,
            "total": 1000,
          }
        }
        integrations={
          Array [
            Object {
              "id": 1,
              "isActive": true,
              "logoUrl": "#",
              "name": "Some Name",
              "sold": 1000,
              "total": 1000,
            },
            Object {
              "id": 2,
              "isActive": true,
              "logoUrl": "#",
              "name": "Some Name",
              "sold": 1000,
              "total": 1000,
            },
          ]
        }
        key="2"
      />
    </Styled(Flex)>
  </Styled(PanelContent)>
</Panel>
`;

exports[`<TicketIntegrations /> should render correctly when an error occurs 1`] = `
<Panel>
  <PanelHeader>
    <Flex
      align="center"
      height="100%"
      justify="space-between"
    >
      <Flex>
        <Styled(styled.h4)
          margin="0"
          marginRight="2.5rem"
          weight="bold"
        >
          INTEGRATIONS
        </Styled(styled.h4)>
      </Flex>
    </Flex>
  </PanelHeader>
  <Styled(PanelContent)>
    <RenderError />
  </Styled(PanelContent)>
</Panel>
`;

exports[`<TicketIntegrations /> should render correctly when loading is true 1`] = `
<Panel>
  <PanelHeader>
    <Flex
      align="center"
      height="100%"
      justify="space-between"
    />
  </PanelHeader>
  <Styled(PanelContent)>
    <Loader />
  </Styled(PanelContent)>
</Panel>
`;

exports[`<TicketIntegrations /> should render correctly when no data is found 1`] = `
<Panel>
  <PanelHeader>
    <Flex
      align="center"
      height="100%"
      justify="space-between"
    >
      <Flex>
        <Styled(styled.h4)
          margin="0"
          marginRight="2.5rem"
          weight="bold"
        >
          INTEGRATIONS
        </Styled(styled.h4)>
      </Flex>
    </Flex>
  </PanelHeader>
  <Styled(PanelContent)>
    <NoData />
  </Styled(PanelContent)>
</Panel>
`;
